Import of RIVILISM/Set-Formula-0.03 from CPAN.
gitpan-cpan-distribution: Set-Formula
gitpan-cpan-version:      0.03
gitpan-cpan-path:         RIVILISM/Set-Formula-0.03.tar.gz
gitpan-cpan-author:       RIVILISM
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 --- #YAML:1.0
 name:               Set-Formula
-version:            0.02
-abstract:           ~
+version:            0.03
+abstract:           Formula calculation for sets
 author:
     - Mart Rivilis <mrivilis@gmail.com>
 license:            Artistic_2_0
