--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,9 @@
 --- #YAML:1.0
 name:               Set-Formula
-version:            0.04
+version:            0.05
 abstract:           Formula calculation for sets
 author:
-    - Mart Rivilis <mrivilis@gmail.com>
+    - Mart E. Rivilis <rivilism@cpan.org>
 license:            Artistic_2_0
 distribution_type:  module
 configure_requires:
